--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
     <div id="education" class="gray">
       <h2>Education</h2>
     </div>
+    <div id="onlineClasses" class="gray">
+      <h3>Online Classes</h3>
+    </div>
     <div id="mapDiv">
       <h2>Where I've Lived and Worked</h2>
     </div>
@@ -143,10 +146,10 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
       document.getElementById('education').style.backgroundColor = 'black';
     }
     if(document.getElementsByClassName('flex-item').length === 0) {
-      //document.getElementById('lets-connect').style.display = 'none';
+      //document.getElementById('flex-item').style.display = 'none';
       document.getElementById('flex-item').style.backgroundColor = 'black';
     }
-    if(document.getElementById('map') === null) {
+    if(document.getElementById('map-Div') === null) {
       //document.getElementById('mapDiv').style.display = 'none';
       document.getElementById('mapDiv').style.backgroundColor = 'black';
     }
