--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
     </div>
     <div id="mapDiv">
       <h2>Where I've Lived and Worked</h2>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1033.8067096789596!2d-70.66695518062815!3d19.429742823394996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sdo!4v1476110619279" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
     <div id="lets-connect" class="dark-gray">
       <h2 class="orange center-text">Let's Connect</h2>
@@ -145,11 +146,14 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
       //document.getElementById('education').style.display = 'none';
       document.getElementById('education').style.backgroundColor = 'black';
     }
+    if (document.getElementsByClassName('online-entry').length === 0) {
+      document.getElementById('onlineClasses').style.backgroundColor = 'black';
+    }
     if(document.getElementsByClassName('flex-item').length === 0) {
       //document.getElementById('flex-item').style.display = 'none';
       document.getElementById('flex-item').style.backgroundColor = 'black';
     }
-    if(document.getElementById('map-Div') === null) {
+    if(document.getElementsByClassName('map-Div').length === 0) {
       //document.getElementById('mapDiv').style.display = 'none';
       document.getElementById('mapDiv').style.backgroundColor = 'black';
     }
